# wslsync

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
tests/: test_config.py  test_integration.py  test_main.py  test_sync.py  test_utils.py  test_wslsync.py
tests/fixtures/: .wslsync
tests/mock_windows_source/documents/: config.txt  notes.md
tests/mock_windows_source/projects/app/: main.py
tests/mock_windows_source/scripts/: backup.sh
tests/mock_wsl2_dest/outdated_folder/: legacy.txt
wslsync/: __init__.py  __main__.py  config.py  sync.py  utils.py
